# WattsApp

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  FC.mermaid  PinMapping.cpp  README.md  Time_Interrupts.cpp  Time_Interrupts.h  pin.cpp  pin.h
.github/workflows/: cmake-multi-platform.yml  qodana_code_quality.yml
AndroidApp/app/: build.gradle.kts
AndroidApp/app/src/androidTest/java/com/bananz0/wattsapp/: ExampleInstrumentedTest.kt
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/com/bananz0/wattsapp/: MainActivity.kt
AndroidApp/app/src/main/java/com/bananz0/wattsapp/data/model/: PowerData.kt
AndroidApp/app/src/main/java/com/bananz0/wattsapp/data/repository/: InfluxDB.kt  InfluxRepository.kt
AndroidApp/app/src/main/java/com/bananz0/wattsapp/ui/components/: PowerFlowDiagram.kt  PowerStatsGrid.kt
AndroidApp/app/src/main/java/com/bananz0/wattsapp/ui/screens/: PowerScreen.kt
AndroidApp/app/src/main/java/com/bananz0/wattsapp/ui/theme/: Color.kt  Theme.kt  Type.kt
AndroidApp/app/src/main/java/com/bananz0/wattsapp/ui/viewmodel/: PowerViewModel.kt
AndroidApp/app/src/main/res/values/: themes.xml
AndroidApp/app/src/test/java/com/bananz0/wattsapp/: ExampleUnitTest.kt
AndroidApp/gradle/: libs.versions.toml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
LabView/: Algorithm.vi  Review.vi  Testing.vi
LabView/Tests/: 0.00,0.00,0.01,0,0.00,0.30,0.00,0.0.txt
assets/: fan.h  stripe_assets.h
bootloader/: atmega644pa-12mhz_2048.hex  commands.txt  optiboot_flash_atmega644p_UART0_115200_12000000L_B7.hex
lib/: pictor.c  pictor.h  uart.cpp  uart.h
lib/WiFiEsp/utility/: EspDrv.cpp  RingBuffer.cpp
lib/arduino/: Tone.cpp  WInterrupts.c  pins_arduino.h  wiring_digital.c  wiring_pulse.c
lib/checksum/: checksum.cpp  checksum.h
lib/pictor/: pictor.c  pictor.h
lib/usbdrv/: usbconfig.h  usbdrv.h
src/: ADCHandler.cpp  ADCHandler.h  AnalogueInput.cpp  AnalogueInput.h  AnalogueOutput.cpp  AnalogueOutput.h  DigitalInput.cpp  DigitalInput.h  DigitalOutput.cpp  DigitalOutput.h  DisplayHandler.cpp  DisplayHandler.h  ESP8266Handler.cpp  ESP8266Handler.h  Loads.cpp  Loads.h  PWMHandler.cpp  PWMHandler.h  PowerHandler.cpp  PowerHandler.h  Sources.cpp  Sources.h  TimeHandler.cpp  TimeHandler.h  WiFiHandler.cpp  WiFiHandler.h  debug.cpp  debug.h  globalVariables.cpp  globalVariables.h  main.cpp  pictor.c  portHandler.cpp  portHandler.h  serialspammertest.py
src/ESP8266/: ESP8266.ino
src/esp8266_wifi_handler/: esp8266_wifi_handler.ino
